--- a/Analyzing_Family's_Monthly_Expenditures.ipynb
+++ b/Analyzing_Family's_Monthly_Expenditures.ipynb
@@ -47,6 +47,7 @@
       },
       "source": [
         "# *Motivation:*\n",
+        "This project was done as part of the Data Science course at Naya College.\n",
         "The main goal of the project is to analyse and derive conclusions from a family's expenditures data- both in family and personal levels.\n",
         "\n",
         "Firstly, I've created a fabricated SQLite data file (attached for downloading), which includes different details: name of the card holder, card number, name of store, shopping category, the amount of money spent, date and day. \n"
