--- a/Regression_Project_Shiran_&_Sol.ipynb
+++ b/Regression_Project_Shiran_&_Sol.ipynb
@@ -37,6 +37,8 @@
         "\n",
         "**Task from NASA Hackathon**\n",
         "\n",
+        "This project was done as part of the Data Science course at Naya College and was written in collaboration with Shiran Bahat.\n",
+        "\n",
         "*Data was taken from: https://www.kaggle.com/dronio/SolarEnergy*\n",
         "\n",
         "\n"
